--- a/projects/index.html
+++ b/projects/index.html
@@ -90,3 +90,13 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 	  <a href="https://github.com/yvoloshin/cfp-app/commit/613f31100e270821a80d3e77eded7cb620dc19a9">Commit# 613f31100e270821a80d3e77eded7cb620dc19a9</a>
 	</li>
 </ul>
+
+<br/>
+<br/>
+
+<h3>The Byte Factory</h3>
+<br/>
+<p>This is a portfolio site that I put together as part of the front-page developer course at <a href="http://www.freecodecamp.com">freecodecamp</a>.</p>
+<a href="http://codepen.io/yvoloshin/pen/OyoQdd"><img src="http://i.imgur.com/3WFxP6t.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
+
+
