--- a/projects/index.html
+++ b/projects/index.html
@@ -93,10 +93,14 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 
 <br/>
 <br/>
-
+<a href="http://www.freecodecamp.com"><h2>Freecodecamp</h2></a> Projects
+<br />
 <h3>The Byte Factory</h3>
 <br/>
-<p>This is a portfolio site that I put together as part of the front-page developer course at <a href="http://www.freecodecamp.com">freecodecamp</a>.</p>
+<p>Portfolio site</p>
 <a href="http://codepen.io/yvoloshin/pen/OyoQdd"><img src="http://i.imgur.com/3WFxP6t.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
-
+<br />
+<p>Pomodoro Clock</p>
+<a href="http://codepen.io/yvoloshin/pen/ojmxxR"><img src="http://i.imgur.com/P01F7nV.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
+<br />
 
