--- a/projects/index.html
+++ b/projects/index.html
@@ -93,7 +93,7 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 
 <br/>
 <br/>
-<span></span><a href="http://www.freecodecamp.com"><h2>Freecodecamp</h2></a><h2>Projects</h2></span>
+<span><a href="http://www.freecodecamp.com"><h2>Freecodecamp</h2></a><h2>Projects</h2></span>
 <p>Freecodecamp is a web development school specializing in JavaScript, HTML, and CSS. All projects listed below were built from scratch.</p> 
 <br />
 <h3>The Byte Factory</h3>
