--- a/projects/index.html
+++ b/projects/index.html
@@ -93,7 +93,7 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 
 <br/>
 <br/>
-<h2><a href="http://www.freecodecamp.com">Freecodecamp</a>Projects</h2>
+<h2><a href="http://www.freecodecamp.com">Freecodecamp&nbsp</a>Projects</h2>
 <p>Freecodecamp is a web development school specializing in JavaScript, HTML, and CSS. All projects listed below were built from scratch.</p> 
 <br />
 <h3>The Byte Factory</h3>
