--- a/projects/index.html
+++ b/projects/index.html
@@ -101,7 +101,7 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 <p>Portfolio site</p>
 <a href="http://codepen.io/yvoloshin/pen/OyoQdd"><img src="http://i.imgur.com/3WFxP6t.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br />
-<p>Pomodoro Clock</p>
+<h3>Pomodoro Clock</h3>
 <a href="http://codepen.io/yvoloshin/pen/ojmxxR"><img src="http://i.imgur.com/P01F7nV.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br />
 
