--- a/projects/index.html
+++ b/projects/index.html
@@ -96,12 +96,12 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 <h2><a href="http://www.freecodecamp.com">Freecodecamp&nbsp</a>Projects</h2>
 <p>Freecodecamp is a web development school specializing in JavaScript, HTML, and CSS. All projects listed below were built from scratch.</p> 
 <br />
-<h3>The Byte Factory</h3>
-<br/>
-<p>Portfolio site</p>
+<h3>Portfolio site</h3>
 <a href="http://codepen.io/yvoloshin/pen/OyoQdd"><img src="http://i.imgur.com/3WFxP6t.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br />
 <h3>Pomodoro Clock</h3>
-<a href="http://codepen.io/yvoloshin/pen/ojmxxR"><img src="http://i.imgur.com/P01F7nV.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
+<p><a href="https://en.wikipedia.org/wiki/Pomodoro_Technique">Pomodoro method</a> is a time management technique that works by breaking down the day into work and rest periods of pre-determined length. 
+A Pomodoro Clock is a tool for keeping track of work and rest intervals. In this implementation of the clock, an alarm sets off when each interval is completed. The length of each interval is customized.</p>
+<a href="http://codepen.io/yvoloshin/pen/ojmxxR"><img src="http://i.imgur.com/S9aQPA7.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br />
 
