--- a/projects/index.html
+++ b/projects/index.html
@@ -104,4 +104,7 @@ CFP-App is a Ruby on Rails application that lets you manage your conference's ca
 A Pomodoro Clock is a tool for keeping track of work and rest intervals. In this implementation of the clock, an alarm sets off when each interval is completed. The length of each interval is customized.</p>
 <a href="http://codepen.io/yvoloshin/pen/ojmxxR"><img src="http://i.imgur.com/S9aQPA7.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br />
+<h3>Calculator</h3>
+<p>This is a working JavaScript calculator.</p>
+<a href="http://codepen.io/yvoloshin/pen/Xmwbvq"><img src="http://i.imgur.com/nNyIY7s.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 
