--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ published: true
           <a href="/projects"><h2>Projects</h2></a>
          <!-- <a href="https://my.webfol.io/w/NDA4"><h2>Projects</h2></a> -->
           <nbsp><nbsp>   
-            <a href="/assets/Yury Voloshin Resume 10-13-15.pdf"><h2>Resume</h2></a>
+            <a href="/assets/Yury Voloshin resume.pdf"><h2>Resume</h2></a>
         </div>
       
       {% include social_links.html %}
