Add RoutineTrack to projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,6 @@ title: Yury's Projects
   }
   
   h3 {
-
     	color: #C04848;
     	margin-bottom: 10px;
   }
@@ -27,11 +26,31 @@ title: Yury's Projects
 	padding-left:4px;
    }
 		
-
-
 </style>
+
+<a href="http://www.routinetrack.com"><h3>RouteTrack</h3></a>
+
+<a href="https://allmyrecipes.herokuapp.com"><img src="https://i.imgur.com/NKYxyJ0.png" alt="Image Missing" style="width:448px;height:211px;"></a>
+
+RoutineTrack is a personal project that I started after starting my first job as a software developer. The project served two goals. First, it started out as a tool for my own use that I could not find anywhere else. Second, since I did not use Rails in my new job, I worked on it in order to avoid losing my Rails knowledge. RoutineTrack is a tool for creating workout routines and then recording the results of these routines. It is different from existing workout apps because it allows the user to create a workout plan, or a routine, prior to the workout, and then to record the actual results of this routine.
+
+<br/>
+
+<a href="https://allmyrecipes.herokuapp.com"><h3>My Recipe Box</h3></a>
+
+My Recipe Box is another personal project. It is an app for displaying and sharing recipes. 
+<a href="https://allmyrecipes.herokuapp.com"><img src="http://i.imgur.com/2OU2hyR.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
+
+<a href="https://github.com/yvoloshin/MyRecipeBox">https://github.com/yvoloshin/MyRecipeBox</a>
  
-<h3>StormyKnights Chess</h3>
+<br/>
+<br/>
+
+Code highlights from StormyKnights and from My Recipe Box can be viewed as snippets on my <a href="https://my.webfol.io/w/NDA4">Webfolio page.</a>
+
+<br/>
+
+<a href="http://stormy-knights.herokuapp.com/"><h3>StormyKnights Chess</h3></a>
 
 <a href="http://stormy-knights.herokuapp.com/"><img src="http://i.imgur.com/areoEIC.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
 <br/>
@@ -61,21 +80,6 @@ StormyKnights is an online chess game. I was a part of a team of four developers
 	</li>
 
 </ul>
-
-<br/>
-
-<h3>My Recipe Box</h3>
-
-My Recipe Box is a personal project. It is an app for displaying and sharing recipes. 
-<a href="https://allmyrecipes.herokuapp.com"><img src="http://i.imgur.com/2OU2hyR.jpg" alt="Image Missing" style="width:448px;height:211px;"></a>
-
-
-<a href="https://github.com/yvoloshin/MyRecipeBox">https://github.com/yvoloshin/MyRecipeBox</a>
- 
-<br/>
-<br/>
-
-Code highlights from StormyKnights and from My Recipe Box can be viewed as snippets on my <a href="https://my.webfol.io/w/NDA4">Webfolio page.</a>
 
 <br/>
 <br/>
